--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name=".TodoApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
-
         <activity
-            android:name=".TodoActivity"
+            android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/AppTheme.OverlapSystemBar"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
