--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.Rally"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".RallyActivity"
             android:exported="true"
-            android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme"
+            android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
