--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -59,8 +59,10 @@ targetSdk = "33"
 truth = "1.1.2"
 turbine = "0.12.1"
 lifecycle-runtime-ktx = "2.6.2"
+material = "1.5.0"
 
 [libraries]
+androidx-google-material = { group = "com.google.android.material", name = "material", version.ref = "material"}
 accompanist-appcompat-theme = { group = "com.google.accompanist", name = "accompanist-appcompat-theme", version.ref = "accompanist" }
 accompanist-flowlayout = { group = "com.google.accompanist", name = "accompanist-flowlayout", version.ref = "accompanist" }
 accompanist-swiperefresh = { group = "com.google.accompanist", name = "accompanist-swiperefresh", version.ref = "accompanist" }
