--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ androidxActivity = "1.6.1"
 androidxAppCompat = "1.5.1"
 androidxArchCore = "2.1.0"
 androidxBrowser = "1.4.0"
-androidxComposeBom = "2023.01.00"
+androidxComposeBom = "2023.10.00"
 androidxComposeCompiler = "1.4.3"
 androidxCompose = "1.2.0"
 androidxComposeRuntimeTracing = "1.0.0-alpha01"
@@ -32,7 +32,7 @@ androidxWindowManager = "1.0.0"
 androidxWork = "2.7.1"
 coil = "2.2.2"
 # @keep
-compileSdk = "33"
+compileSdk = "34"
 hamcrest = "1.3"
 hilt = "2.44.2"
 hiltExt = "1.0.0"
@@ -45,7 +45,7 @@ kotlinxSerializationJson = "1.5.0"
 ksp = "1.8.10-1.0.9"
 lint = "30.3.1"
 # @keep
-minSdk = "21"
+minSdk = "23"
 okhttp = "4.10.0"
 protobuf = "3.21.12"
 protobufPlugin = "0.8.19"
@@ -59,6 +59,8 @@ targetSdk = "33"
 truth = "1.1.2"
 turbine = "0.12.1"
 lifecycle-runtime-ktx = "2.6.2"
+material = "1.10.0"
+material-window-size = "1.1.2"
 
 [libraries]
 accompanist-appcompat-theme = { group = "com.google.accompanist", name = "accompanist-appcompat-theme", version.ref = "accompanist" }
@@ -79,7 +81,7 @@ androidx-compose-foundation-layout = { group = "androidx.compose.foundation", na
 androidx-compose-material-core = { group = "androidx.compose.material", name = "material" }
 androidx-compose-material-iconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-compose-material3-windowSizeClass = { group = "androidx.compose.material3", name = "material3-window-size-class" }
+androidx-compose-material3-windowSize = { group = "androidx.compose.material3", name = "material3-window-size-class" }
 androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 androidx-compose-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata" }
 androidx-compose-runtime-tracing = { group = "androidx.compose.runtime", name = "runtime-tracing", version.ref = "androidxComposeRuntimeTracing" }
@@ -137,6 +139,7 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-testing = { group = "androidx.room", name = "room-testing", version.ref = "room" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
