--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,11 +3,11 @@ accompanist = "0.28.0"
 annotation = "1.5.0"
 androidDesugarJdkLibs = "1.2.2"
 androidGradlePlugin = "7.4.0"
-androidxActivity = "1.6.1"
-androidxAppCompat = "1.5.1"
+androidxActivity = "1.8.2"
+androidxAppCompat = "1.6.1"
 androidxArchCore = "2.1.0"
 androidxBrowser = "1.4.0"
-androidxComposeBom = "2023.01.00"
+androidxComposeBom = "2023.10.01"
 androidxComposeCompiler = "1.4.3"
 androidxCompose = "1.2.0"
 androidxComposeRuntimeTracing = "1.0.0-alpha01"
@@ -16,7 +16,7 @@ androidxCoreSplashscreen = "1.0.0"
 androidxDataStore = "1.0.0"
 androidxEspresso = "3.5.0"
 androidxHiltNavigationCompose = "1.0.0"
-androidxLifecycle = "2.6.0-alpha03"
+androidxLifecycle = "2.7.0"
 androidxMacroBenchmark = "1.1.1"
 androidxMetrics = "1.0.0-alpha03"
 androidxNavigation = "2.5.3"
@@ -30,16 +30,16 @@ androidxTracing = "1.1.0"
 androidxUiAutomator = "2.2.0"
 androidxWindowManager = "1.0.0"
 androidxWork = "2.7.1"
-coil = "2.2.2"
+coil = "2.5.0"
 # @keep
 compileSdk = "33"
 hamcrest = "1.3"
-hilt = "2.44.2"
+hilt = "2.50"
 hiltExt = "1.0.0"
 jacoco = "0.8.7"
 junit4 = "4.13.2"
 kotlin = "1.8.10"
-kotlinxCoroutines = "1.6.4"
+kotlinxCoroutines = "1.7.3"
 kotlinxDatetime = "0.4.0"
 kotlinxSerializationJson = "1.5.0"
 ksp = "1.8.10-1.0.9"
@@ -59,6 +59,9 @@ targetSdk = "33"
 truth = "1.1.2"
 turbine = "0.12.1"
 lifecycle-runtime-ktx = "2.6.2"
+maps = "3.1.0-beta"
+maps-ktx = "3.4.0"
+volley = "1.2.1"
 
 [libraries]
 accompanist-appcompat-theme = { group = "com.google.accompanist", name = "accompanist-appcompat-theme", version.ref = "accompanist" }
@@ -96,6 +99,7 @@ androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navig
 androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "androidxLifecycle" }
 androidx-lifecycle-runtimeCompose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
 androidx-lifecycle-viewModelCompose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
+androidx-lifecycle-viewModel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
 androidx-metrics = { group = "androidx.metrics", name = "metrics-performance", version.ref = "androidxMetrics" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
 androidx-navigation-testing = { group = "androidx.navigation", name = "navigation-testing", version.ref = "androidxNavigation" }
@@ -137,6 +141,9 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-testing = { group = "androidx.room", name = "room-testing", version.ref = "room" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
+maps = { group = "com.google.android.libraries.maps", name = "maps", version.ref = "maps" }
+maps-ktx = { group = "com.google.maps.android", name = "maps-v3-ktx", version.ref = "maps-ktx" }
+volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
