--- a/gradle.properties
+++ b/gradle.properties
@@ -27,4 +27,4 @@ android.enableJetifier=true
 kapt.incremental.apt=true
 ksp.incremental.apt=true
 org.gradle.unsafe.configuration-cache=true
-android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
