--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 accompanist = "0.28.0"
 annotation = "1.5.0"
 androidDesugarJdkLibs = "1.2.2"
-androidGradlePlugin = "7.4.0"
+androidGradlePlugin = "8.2.0"
 androidxActivity = "1.8.2"
 androidxAppCompat = "1.6.1"
 androidxArchCore = "2.1.0"
@@ -30,12 +30,13 @@ androidxTracing = "1.1.0"
 androidxUiAutomator = "2.2.0"
 androidxWindowManager = "1.0.0"
 androidxWork = "2.7.1"
-coil = "2.5.0"
+coil = "2.4.0"
 # @keep
-compileSdk = "33"
+compileSdk = "34"
 hamcrest = "1.3"
 hilt = "2.50"
-hiltExt = "1.0.0"
+hiltExt = "1.2.0"
+hiltExt2 = "2.50"
 jacoco = "0.8.7"
 junit4 = "4.13.2"
 kotlin = "1.8.10"
@@ -127,7 +128,8 @@ hamcrest = { group = "org.hamcrest", name = "hamcrest-all", version.ref = "hamcr
 hilt-android-core = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
-hilt-ext-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hiltExt" }
+dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+hilt-ext-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hiltExt2" }
 hilt-ext-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltExt" }
 junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
