--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,4 @@ kapt.incremental.apt=true
 ksp.incremental.apt=true
 org.gradle.unsafe.configuration-cache=true
 android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
