--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,32 +3,32 @@ accompanist = "0.28.0"
 annotation = "1.5.0"
 androidDesugarJdkLibs = "1.2.2"
 androidGradlePlugin = "8.3.0"
-androidxActivity = "1.6.1"
-androidxAppCompat = "1.5.1"
-androidxArchCore = "2.1.0"
+androidxActivity = "1.8.2"
+androidxAppCompat = "1.6.1"
+androidxArchCore = "2.2.0"
 androidxBrowser = "1.4.0"
-androidxComposeBom = "2023.01.00"
-androidxComposeCompiler = "1.4.3"
+androidxComposeBom = "2024.02.02"
+androidxComposeCompiler = "1.4.4"
 androidxCompose = "1.2.0"
-androidxComposeRuntimeTracing = "1.0.0-alpha01"
-androidxCore = "1.9.0"
+androidxComposeRuntimeTracing = "1.0.0-beta01"
+androidxCore = "1.12.0"
 androidxCoreSplashscreen = "1.0.0"
 androidxDataStore = "1.0.0"
-androidxEspresso = "3.5.0"
-androidxHiltNavigationCompose = "1.0.0"
-androidxLifecycle = "2.6.0-alpha03"
+androidxEspresso = "3.5.1"
+androidxHiltNavigationCompose = "1.2.0"
+androidxLifecycle = "2.7.0"
 androidxMacroBenchmark = "1.1.1"
 androidxMetrics = "1.0.0-alpha03"
-androidxNavigation = "2.5.3"
+androidxNavigation = "2.7.7"
 androidxProfileinstaller = "1.2.1"
 androidxStartup = "1.1.1"
 androidxTestCore = "1.5.0"
-androidxTestExt = "1.1.4"
+androidxTestExt = "1.1.5"
 androidxTestRules = "1.5.0"
-androidxTestRunner = "1.5.1"
+androidxTestRunner = "1.5.2"
 androidxTracing = "1.1.0"
-androidxUiAutomator = "2.2.0"
-androidxWindowManager = "1.0.0"
+androidxUiAutomator = "2.3.0"
+androidxWindowManager = "1.2.0"
 androidxWork = "2.7.1"
 coil = "2.2.2"
 # @keep
@@ -43,7 +43,7 @@ kotlinxCoroutines = "1.6.4"
 kotlinxDatetime = "0.4.0"
 kotlinxSerializationJson = "1.5.0"
 ksp = "1.8.10-1.0.9"
-lint = "30.3.1"
+lint = "31.3.0"
 # @keep
 minSdk = "21"
 okhttp = "4.10.0"
@@ -58,7 +58,7 @@ timber = "5.0.1"
 targetSdk = "33"
 truth = "1.1.2"
 turbine = "0.12.1"
-lifecycle-runtime-ktx = "2.6.2"
+lifecycle-runtime-ktx = "2.7.0"
 material = "1.11.0"
 
 [libraries]
