--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,26 @@
 [versions]
 accompanist = "0.28.0"
-annotation = "1.5.0"
-androidDesugarJdkLibs = "1.2.2"
-androidGradlePlugin = "8.3.0"
-androidxActivity = "1.6.1"
-androidxAppCompat = "1.5.1"
+annotation = "1.8.0"
+androidDesugarJdkLibs = "2.0.4"
+androidGradlePlugin = "8.4.0"
+androidxActivity = "1.9.0"
+androidxAppCompat = "1.6.1"
 androidxArchCore = "2.1.0"
 androidxBrowser = "1.4.0"
-androidxComposeBom = "2023.01.00"
-androidxComposeCompiler = "1.4.3"
+androidxComposeBom = "2024.04.00"
+androidxComposeCompiler = "1.5.10" # error
 androidxCompose = "1.2.0"
-androidxComposeRuntimeTracing = "1.0.0-alpha01"
-androidxCore = "1.9.0"
+androidxComposeRuntimeTracing = "1.0.0-beta01"
+androidxCore = "1.13.1"
 androidxCoreSplashscreen = "1.0.0"
 androidxDataStore = "1.0.0"
 androidxEspresso = "3.5.0"
-androidxHiltNavigationCompose = "1.0.0"
-androidxLifecycle = "2.6.0-alpha03"
+androidxHiltNavigationCompose = "1.2.0"
+androidxLifecycle = "2.7.0"
 androidxMacroBenchmark = "1.1.1"
-androidxMetrics = "1.0.0-alpha03"
-androidxNavigation = "2.5.3"
-androidxProfileinstaller = "1.2.1"
+androidxMetrics = "1.0.0-beta01"
+androidxNavigation = "2.7.7"
+androidxProfileinstaller = "1.3.1"
 androidxStartup = "1.1.1"
 androidxTestCore = "1.5.0"
 androidxTestExt = "1.1.4"
@@ -28,22 +28,23 @@ androidxTestRules = "1.5.0"
 androidxTestRunner = "1.5.1"
 androidxTracing = "1.1.0"
 androidxUiAutomator = "2.2.0"
-androidxWindowManager = "1.0.0"
-androidxWork = "2.7.1"
+androidxWindowManager = "1.2.0"
+androidxWork = "2.9.0"
 coil = "2.2.2"
 # @keep
 compileSdk = "34"
 hamcrest = "1.3"
-hilt = "2.44.2"
-hiltExt = "1.0.0"
+hilt = "2.49"
+hiltExt = "1.2.0"
 jacoco = "0.8.7"
 junit4 = "4.13.2"
-kotlin = "1.8.10"
-kotlinxCoroutines = "1.6.4"
+kotlin = "1.9.22"
+kotlinxCoroutines = "1.7.3"
 kotlinxDatetime = "0.4.0"
 kotlinxSerializationJson = "1.5.0"
-ksp = "1.8.10-1.0.9"
-lint = "30.3.1"
+#ksp = "1.8.10-1.0.9"
+ksp = "1.9.22-1.0.17"
+lint = "31.4.0"
 # @keep
 minSdk = "21"
 okhttp = "4.10.0"
@@ -51,14 +52,14 @@ protobuf = "3.21.12"
 protobufPlugin = "0.8.19"
 retrofit = "2.9.0"
 retrofitKotlinxSerializationJson = "0.8.0"
-room = "2.5.0-rc01"
+room = "2.6.1"
 spotless = "5.12.5"
 timber = "5.0.1"
 # @keep
 targetSdk = "33"
 truth = "1.1.2"
 turbine = "0.12.1"
-lifecycle-runtime-ktx = "2.6.2"
+lifecycle-runtime-ktx = "2.8.0"
 
 [libraries]
 accompanist-appcompat-theme = { group = "com.google.accompanist", name = "accompanist-appcompat-theme", version.ref = "accompanist" }
