--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -67,6 +67,8 @@ recyclerview = "1.3.2"
 navFragmentKtx = "2.7.7"
 fragmentKtx = "1.7.1"
 databindingCommon = "8.4.1"
+mockito = "5.12.0"
+dexmakerMockito = "2.28.3"
 
 [libraries]
 accompanist-appcompat-theme = { group = "com.google.accompanist", name = "accompanist-appcompat-theme", version.ref = "accompanist" }
@@ -158,6 +160,9 @@ timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "tim
 # Once https://issuetracker.google.com/128612536 is fixed this can be fixed.
 fragment-test = { group = "androidx.fragment", name = "fragment-testing", version.ref = "fragmentKtx" }
 test-core = { group = "androidx.test", name = "core", version.ref = "androidxTestCore" }
+mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
+dexmaker-mockito = { group = "com.linkedin.dexmaker", name = "dexmaker-mockito", version.ref = "dexmakerMockito"}
+
 
 
 # Dependencies of the included build-logic
