network basics codelab complete

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,7 +47,8 @@ ksp = "1.9.22-1.0.17"
 lint = "31.4.0"
 # @keep
 minSdk = "21"
-okhttp = "4.10.0"
+okhttp = "4.11.0"
+serializationConverter = "1.0.0"
 protobuf = "3.21.12"
 protobufPlugin = "0.8.19"
 retrofit = "2.9.0"
@@ -140,6 +141,8 @@ room-testing = { group = "androidx.room", name = "room-testing", version.ref = "
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-scalar-converter = { group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "retrofit" }
+kotlinx-serialization-converter  = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "serializationConverter" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
